# oracle

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
scripts/: install.sh  install_release.sh
src/: cli.rs  main.rs  service.rs
