[package]
name = "oracle"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.8", features = ["server", "macros", "transport-io"] }
serde = { version = "1", features = ["derive"] }
schemars = "1.1"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
clap = { version = "4.5", features = ["derive"] }
